Added library path.
git-svn-id: https://svn.blender.org/svnroot/verse/trunk@2573 49c17534-1d02-dc11-b283-0030488c597c

--- a/configure.ac
+++ b/configure.ac
@@ -18,6 +18,7 @@ AC_ARG_WITH([verse], [AC_HELP_STRING([--with-verse], [location of verse])],
     AC_MSG_ERROR([invalid location "$withval"])
   fi
   CPPFLAGS="-I$withval $CPPFLAGS"
+  LDFLAGS="-L$withval $LDFLAGS"
 ])
 
 # Checks for header files.
