Added object node.
git-svn-id: https://svn.blender.org/svnroot/verse/trunk@2788 49c17534-1d02-dc11-b283-0030488c597c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,5 @@
 lib_LIBRARIES = libample.a
 
 libample_a_SOURCES = Ample.cpp AmpleGeometry.cpp AmpleNode.cpp \
-  AmpleSession.cpp AmpleTag.cpp AmpleText.cpp
+  AmpleObject.cpp AmpleSession.cpp AmpleTag.cpp AmpleText.cpp
 
