Added bitmap node sketch, bug fix for observer detaching.
git-svn-id: https://svn.blender.org/svnroot/verse/trunk@2944 49c17534-1d02-dc11-b283-0030488c597c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 
 lib_LIBRARIES = libample.a
 
-libample_a_SOURCES = Ample.cpp AmpleGeometry.cpp AmpleNode.cpp \
-  AmpleObject.cpp AmpleSession.cpp AmpleTag.cpp AmpleText.cpp
+libample_a_SOURCES = Ample.cpp AmpleBitmap.cpp AmpleGeometry.cpp \
+  AmpleNode.cpp AmpleObject.cpp AmpleSession.cpp AmpleTag.cpp AmpleText.cpp
 
