Ported renderer to GLUT.
git-svn-id: https://svn.blender.org/svnroot/verse/trunk@2958 49c17534-1d02-dc11-b283-0030488c597c

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -12,7 +12,7 @@ lint_LDADD = -lample -lverse
 lint_SOURCES = lint.cpp
 
 render_CPPFLAGS = -I@top_srcdir@/include
-render_LDFLAGS = -L@top_srcdir@/src -framework OpenGL -framework AGL -framework Carbon
-render_LDADD = -lample -lverse -lglfw 
+render_LDFLAGS = -L@top_srcdir@/src
+render_LDADD = -lample -lverse
 render_SOURCES = render.cpp
 
